5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1649_1053.log
== TEST (2019-04-15 22:20:28) 
-- CODE:
a = input("escreva o patrono")
if a = "cervo":
	mensagem = a "eh patrono do harry potter"
else:
	mensagem = a "nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if a = "cervo":
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:21:37) 
-- CODE:
a = input("escreva o patrono")
if a = cervo:
	mensagem = a "eh patrono do harry potter"
else:
	mensagem = a "nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if a = cervo:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:21:47) 
-- CODE:
a = input("escreva o patrono")
if a == cervo:
	mensagem = a "eh patrono do harry potter"
else:
	mensagem = a "nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    mensagem = a "eh patrono do harry potter"
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:22:03) 
-- CODE:
a = input("escreva o patrono")
if a == cervo:
	mensagem = a eh patrono do harry potter
else:
	mensagem = a "nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    mensagem = a eh patrono do harry potter
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:22:11) 
-- CODE:
a = input("escreva o patrono")
if a == cervo:
	mensagem = a eh patrono do harry potter
else:
	mensagem = a "nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    mensagem = a eh patrono do harry potter
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:22:22) 
-- CODE:
a = input("escreva o patrono")
if a == cervo:
	mensagem = a (eh patrono do harry potter)
else:
	mensagem = a "nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    mensagem = a (eh patrono do harry potter)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:22:40) 
-- CODE:
a = input("escreva o patrono")
if a == cervo:
	mensagem = a ("eh patrono do harry potter")
else:
	mensagem = a "nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    mensagem = a "nao eh patrono do harry potter"
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:22:56) 
-- CODE:
a = input("escreva o patrono")
if a == cervo:
	mensagem = "eh patrono do harry potter"
else:
	mensagem = a "nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    mensagem = a "nao eh patrono do harry potter"
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:23:12) 
-- CODE:
a = input("escreva o patrono")
if a == cervo:
	mensagem = "eh patrono do harry potter"
else:
	mensagem = "nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if a == cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:23:26) 
-- CODE:
a = input("escreva o patrono")
if a == cervo:
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "a nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if a == cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:23:48) 
-- CODE:
a = input("escreva o patrono")
if a = "cervo":
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "a nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if a = "cervo":
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:24:11) 
-- CODE:
a = input("escreva o patrono")
if (a = "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "a nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = "cervo"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:25:18) 
-- CODE:
a = input("escreva o patrono")
if "cervo":
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "a nao eh patrono do harry potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:25:24) 
-- CODE:
a = input("escreva o patrono")
if "cervo":
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "a nao eh patrono do harry potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:26:11) 
-- CODE:
a = input("escreva o patrono")
if "cervo":
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "a nao eh patrono do harry potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:26:14) 
-- CODE:
a = input("escreva o patrono")
if "cervo":
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "a nao eh patrono do harry potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:26:35) 
-- CODE:
a = input("escreva o patrono")
if a = "cervo":
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "a nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if a = "cervo":
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:32:31) 
-- CODE:
a = input("escreva o patrono")
b = "cervo"
if b:
	print = "cervo eh patrono do harry potter
else:
	pri
-- ERROR:
File "XXXX", line 4
    print = "cervo eh patrono do harry potter
                                            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(= "cervo eh patrono do harry potter)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:32:49) 
-- CODE:
a = input("escreva o patrono")
b = "cervo"
if b:
	print = "cervo eh patrono do harry potter"
else:
	pri
-- ERROR:
File "XXXX", line 4
    print = "cervo eh patrono do harry potter
                                            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(= "cervo eh patrono do harry potter)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:33:05) 
-- CODE:
a = input("escreva o patrono")
b = "cervo"
if b:
	print = "cervo eh patrono do harry potter"
else:
	print = "nope"
-- ERROR:
File "XXXX", line 4
    print = "cervo eh patrono do harry potter
                                            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(= "cervo eh patrono do harry potter)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:37:31) 
-- CODE:
a = input("escreva o patrono")
b = "cervo"
if b:
	print = "cervo eh patrono do harry potter"
else:
	print = "nope"
-- ERROR:
File "XXXX", line 4
    print = "cervo eh patrono do harry potter
                                            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(= "cervo eh patrono do harry potter)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:38:06) 
-- CODE:
a = input("escreva o patrono")
b = "cervo"
if b:
	print("cervo eh patrono do harry potter")
else:
	print = "nope"
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:38:31) 
-- CODE:
a = input("escreva o patrono")
b = "cervo"
if b:
	print("cervo eh patrono do harry potter")
else:
	print("nope")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:38:46) 
-- CODE:
a = input("escreva o patrono")
b = "cervo"
if a = b:
	print("cervo eh patrono do harry potter")
else:
	print("nope")
-- ERROR:
File "XXXX", line 3
    if a = b:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:39:17) 
-- CODE:
a = input("escreva o patrono")
b = "cervo"
if b:
	print("cervo eh patrono do harry potter")
else:
	print("nope")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:40:15) 
-- CODE:
a = input("escreva o patrono")
if a is cervo:
	print("cervo eh patrono do harry potter")
else:
	print("nope")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if a is cervo:
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:40:31) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print("nope")
-- OUTPUT:
nope
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:41:00) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print(a" nao eh patrono do harry potter")
-- ERROR:
File "XXXX", line 5
    print(a" nao eh patrono do harry potter")
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:41:10) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print(a "o eh patrono do harry potter")
-- ERROR:
File "XXXX", line 5
    print(a "o eh patrono do harry potter")
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:42:23) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print(a)
-- OUTPUT:
cervo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:42:39) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print(a)("sad")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a)("sad")
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:42:55) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print(a)print("cu")
-- ERROR:
File "XXXX", line 5
    print(a)print("cu")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:43:27) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print("<a> asdads")
-- OUTPUT:
<a> asdads
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:43:55) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print("a sdads")
-- OUTPUT:
a sdads
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:44:29) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print(a + "não")
-- OUTPUT:
cervonão
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:44:37) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print(a + "na")
-- OUTPUT:
cervona
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:44:56) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:45:00) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- EXECUTION TIME:
0.156057
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:45:46) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do Harrt Potter")
else:
	print(a + " nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.163828
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:46:04) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do Harrt Potter")
else:
	print(a + " nao eh patrono do Harry Potter")
-- OUTPUT:
cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:46:10) 
-- CODE:
a = input("escreva o patrono")
if a is "cervo":
	print("cervo eh patrono do Harrt Potter")
else:
	print(a + " nao eh patrono do Harry Potter")
-- OUTPUT:
cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:48:21) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do Harrt Potter")
else:
	print(a + " nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harrt Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:48:31) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do Harrt Potter")
else:
	print(a + " nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.151895
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harrt Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:48:41) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do Harrt Potter")
else:
	print(a + " nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harrt Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:48:46) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do Harrt Potter")
else:
	print(a + " nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harrt Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:49:10) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- EXECUTION TIME:
0.150033
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:49:11) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:49:15) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:49:17) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:49:21) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:49:24) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:49:27) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- EXECUTION TIME:
0.143821
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:49:32) 
-- CODE:
a = input("escreva o patrono")
if a in ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:50:00) 
-- CODE:
a = input("escreva o patrono")
if a is("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- EXECUTION TIME:
0.213512
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:50:00) 
-- CODE:
a = input("escreva o patrono")
if a is("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:50:01) 
-- CODE:
a = input("escreva o patrono")
if a is("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:50:14) 
-- CODE:
a = input("escreva o patrono")
if a is ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- EXECUTION TIME:
0.146671
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:50:14) 
-- CODE:
a = input("escreva o patrono")
if a is ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:50:51) 
-- CODE:
a = input("escreva o patrono")
if a == ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- EXECUTION TIME:
0.21844
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
escreva o patronobode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:50:51) 
-- CODE:
a = input("escreva o patrono")
if a == ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:50:54) 
-- CODE:
a = input("escreva o patrono")
if a == ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:50:57) 
-- CODE:
a = input("escreva o patrono")
if a == ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:50:59) 
-- CODE:
a = input("escreva o patrono")
if a == ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:51:01) 
-- CODE:
a = input("escreva o patrono")
if a == ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:51:03) 
-- CODE:
a = input("escreva o patrono")
if a == ("cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(a + " nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:51:35) 
-- CODE:
a = input("escreva o patrono")
if a == ("cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(a + " nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:51:36) 
-- CODE:
a = input("escreva o patrono")
if a == ("cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(a + " nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.147646
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
